# jobtools

./: .env.example  NOTES.md  README.md  ROADMAP.md  pyproject.toml
src/jobtools/: __init__.py  cli.py  compiler.py  crawler.py  extractor.py  manifest.py  models.py  parser.py  prompts.py  settings.py  tailor.py  utils.py
src/jobtools/cli/: __init__.py  cli.py  compile.py  config.py  extract.py  init.py  open_.py  status.py  tailor.py
tests/: test_smoke.py
